--- a/demo/templates/index4.html
+++ b/demo/templates/index4.html
@@ -8,8 +8,6 @@
         @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Zen+Maru+Gothic:wght@500&display=swap');
 
         html {
-            font-family: 'Mochiy Pop One', sans-serif;
-            font-family: 'Zen Maru Gothic', sans-serif;
             margin-top: 10px;
             margin-left: auto;
             margin-right: auto;
@@ -30,7 +28,6 @@
             margin: 10px auto;
             text-align: center;
         }
-
         button, input {
             font-size: 25px;
             border: 2px #178ca4 solid;
@@ -62,32 +59,16 @@
     </style>
 </head>
 <body>
-    <h1>測試結果</h1>
-    <div class="box1"> 
-        <p id="text" class="inputword"></p> 
-        <p id="scoretext" class="inputword"></p>  
+    <h1>測試結果</h1> 
+    <div class="box1">
+      <p class="inputword">未偵測人聲</p>
+      <p class="inputword">請重新錄音</p>
     </div>
-    <button class="returnback" onclick="back_to_record()">返回測試頁面</button>
+    <button class="returnback" onclick="back_to_record()">返回重新錄製</button>  <!--回到index1-->
     <script>
-        var word_str = {{ word_str }}; 
-        var word_dict = "{{ word_dict }}"; 
-        var text = document.getElementById("text");
-        text.textContent = word_dict;
-        var scoreText = document.getElementById("scoretext");
-        if(word_str === 100){
-            scoreText.textContent = "發音正確";
-        }else if(word_str === 0){
-            scoreText.textContent = "";
-        }else if(word_str < 30){
-            scoreText.textContent = "發音錯誤";
-        }else if(word_str >= 30 && word_str < 40){
-            scoreText.textContent = "加油，只差一點了";
-        }else if(word_str >= 40 && word_str <= 65){
-            scoreText.textContent = "有點不對，再試一次";
-        }
-        function back_to_record() {
-            location.href = "/";
-        }
-    </script>
+      function back_to_record() {
+          location.href = "/";
+      }
+  </script>
 </body>
 </html>
