updated collection website

--- a/demo/templates/index1.html
+++ b/demo/templates/index1.html
@@ -223,7 +223,7 @@
           <tr>
             <td class="pronounce" data-audio="audio/7.mp3">せんせい</td>
             <td>老師</td>
-            <td class="pronounce" data-audio="audio/8.mp3">きょうし</td>
+            <td class="pronounce" data-audio="audio/8.mp3">きょうしつ</td>
             <td>教室</td>
             <td class="pronounce" data-audio="audio/9.mp3">がくせい</td>
             <td>學生</td>
