--- a/demo/templates/index3.html
+++ b/demo/templates/index3.html
@@ -203,7 +203,7 @@
             <td>老師</td>
           </tr>
           <tr>
-            <td class="pronounce" data-audio="audio/8.mp3">きょうし</td>
+            <td class="pronounce" data-audio="audio/8.mp3">きょうしつ</td>
             <td>教室</td>
           </tr>
           <tr>
