updated the collection_website

--- a/collection_website/templates/index4.html
+++ b/collection_website/templates/index4.html
@@ -61,7 +61,7 @@
 <body>
     <h1>測試結果</h1> 
     <div class="box1">
-      <p class="inputword">未偵測人聲</p>
+      <p class="inputword">未偵測有效聲音</p>
       <p class="inputword">請重新錄音</p>
     </div>
     <button class="returnback" onclick="back_to_record()">返回重新錄製</button>  <!--回到index1-->
