--- a/collection_website/templates/index2.html
+++ b/collection_website/templates/index2.html
@@ -71,19 +71,13 @@
     <script>
         var word_str = {{ word_str }}; 
         var word_dict = "{{ word_dict }}"; 
-        var text = document.getElementById("text");
-        text.textContent = word_dict;
+        // var text = document.getElementById("text");
+        // text.textContent = word_dict;
         var scoreText = document.getElementById("scoretext");
         if(word_str === 100){
-            scoreText.textContent = "發音正確";
+            scoreText.textContent = "收錄成功";
         }else if(word_str === 0){
-            scoreText.textContent = "";
-        }else if(word_str < 30){
-            scoreText.textContent = "發音錯誤";
-        }else if(word_str >= 30 && word_str < 40){
-            scoreText.textContent = "加油，只差一點了";
-        }else if(word_str >= 40 && word_str <= 65){
-            scoreText.textContent = "有點不對，再試一次";
+            scoreText.textContent = "相似度過低，辨識失敗";
         }
         function back_to_record() {
             location.href = "/";
